--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,3 +31,29 @@
     transform: rotate(360deg);
   }
 }
+
+/* ----------Navbar CSS---------- */
+
+.navbar {
+  background-color: red;
+  width: 100%;
+  position: fixed;
+  height: 70px;
+  z-index: 2;
+}
+
+.navbar ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  margin-top: 0px;
+}
+
+.navbar img {
+  height: 40px;
+  padding-top: 13px;
+}
+
+.navbar li {
+  align-self: center;
+}
